// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots AddClothes snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#16579c",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 36,
          "fontWeight": "bold",
          "maxWidth": "80%",
        }
      }
    >
      Add Clothes
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          Saved Outfits
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "height": 200,
          "justifyContent": "center",
          "width": 200,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "height": 150,
            "width": 150,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "fontSize": 20,
          "height": 47,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 200,
        }
      }
    >
      <View>
        <RNCPicker
          items={
            Array [
              Object {
                "label": "Hat",
                "testID": undefined,
                "textColor": undefined,
                "value": "hat",
              },
              Object {
                "label": "Coat",
                "testID": undefined,
                "textColor": undefined,
                "value": "coat",
              },
              Object {
                "label": "Layer",
                "testID": undefined,
                "textColor": undefined,
                "value": "layer",
              },
              Object {
                "label": "Under Garment",
                "testID": undefined,
                "textColor": undefined,
                "value": "under",
              },
              Object {
                "label": "Pants",
                "testID": undefined,
                "textColor": undefined,
                "value": "pants",
              },
              Object {
                "label": "Shoes",
                "testID": undefined,
                "textColor": undefined,
                "value": "shoes",
              },
            ]
          }
          numberOfLines={1}
          onChange={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "height": 47,
          "justifyContent": "center",
          "width": 335,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "paddingLeft": 10,
          }
        }
      >
        Select a Main colour
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "height": 47,
          "justifyContent": "center",
          "marginTop": 15,
          "width": 335,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "paddingLeft": 10,
          }
        }
      >
        Warmth                                          /10
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "height": 47,
          "justifyContent": "center",
          "marginTop": 15,
          "width": 335,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "paddingLeft": 10,
          }
        }
      >
        Wind                                               /10
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "height": 47,
          "justifyContent": "center",
          "marginTop": 15,
          "width": 335,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "paddingLeft": 10,
          }
        }
      >
        Rain                                                /10
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6F99C5",
          "borderRadius": 10,
          "height": 47,
          "justifyContent": "center",
          "marginTop": 18,
          "width": 200,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "textAlign": "center",
          }
        }
      >
        Save
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Snapshots App snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#16579c",
                "borderBottomColor": "#a7a7aa",
                "flex": 1,
                "shadowColor": "#a7a7aa",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "#16579c",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Recommended
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        forwardedRef={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      emulateUnlessSupported={true}
                      style={
                        Object {
                          "backgroundColor": "#16579c",
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "white",
                            "flex": 14,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "black",
                              "fontSize": 36,
                              "fontWeight": "bold",
                              "maxWidth": "80%",
                            }
                          }
                        >
                          Today's Outfit
                        </Text>
                        <Image
                          resizeMode="contain"
                          source={1}
                          style={
                            Object {
                              "flex": 3,
                            }
                          }
                        />
                        <Image
                          resizeMode="contain"
                          source={1}
                          style={
                            Object {
                              "flex": 3,
                            }
                          }
                        />
                        <Image
                          resizeMode="contain"
                          source={1}
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 2,
                            "flexDirection": "row",
                            "justifyContent": "space-around",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "white",
                              "fontSize": 30,
                              "fontWeight": "bold",
                              "maxWidth": "80%",
                            }
                          }
                        >
                           22 degrees Celcius
                        </Text>
                        <Image
                          source={
                            Object {
                              "uri": "http://openweathermap.org/img/wn/10d@2x.png",
                            }
                          }
                          style={
                            Object {
                              "height": 100,
                              "width": 100,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "alignItems": "flex-end",
                            "backgroundColor": "#16579c",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <View
                          accessibilityRole="button"
                          accessibilityState={Object {}}
                          accessible={true}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {},
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#007AFF",
                                    "fontSize": 18,
                                    "margin": 8,
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              More Weather
                            </Text>
                          </View>
                        </View>
                        <View
                          accessibilityRole="button"
                          accessibilityState={Object {}}
                          accessible={true}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {},
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#007AFF",
                                    "fontSize": 18,
                                    "margin": 8,
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              Calendar
                            </Text>
                          </View>
                        </View>
                        <View
                          accessibilityRole="button"
                          accessibilityState={Object {}}
                          accessible={true}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {},
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#007AFF",
                                    "fontSize": 18,
                                    "margin": 8,
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              Add Clothes
                            </Text>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`Snapshots Calendar snapshot 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "backgroundColor": "#16579c",
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "paddingVertical": 60,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "top": -15,
          "width": 160,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 21,
          }
        }
      >
        My Calendar
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 20,
          "top": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          S
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          S
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          M
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          T
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          W
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          T
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          F
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "orange",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            9
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            10
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            11
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            12
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            13
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            14
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "dodgerblue",
            "borderRadius": 15,
            "flexDirection": "row",
            "height": 40,
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "top": 20,
            "width": 40,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 15,
              }
            }
          >
            15
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "top": 30,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
          }
        }
      >
        Saturday
         
        9
         
        April
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F8F8F8",
        "flexDirection": "column",
        "height": 500,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "backgroundColor": "white",
            "borderRadius": 15,
            "flexDirection": "column",
            "height": 90,
            "justifyContent": "space-evenly",
            "width": 350,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontSize": 19,
              "paddingHorizontal": 15,
            }
          }
        >
          Event 1
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "fontSize": 15,
              "paddingHorizontal": 15,
            }
          }
        >
          Time
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "fontSize": 15,
              "paddingHorizontal": 15,
            }
          }
        >
          Date
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "backgroundColor": "white",
            "borderRadius": 15,
            "flexDirection": "column",
            "height": 90,
            "justifyContent": "space-evenly",
            "width": 350,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontSize": 19,
              "paddingHorizontal": 15,
            }
          }
        >
          Event 2
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "fontSize": 15,
              "paddingHorizontal": 15,
            }
          }
        >
          Time
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "fontSize": 15,
              "paddingHorizontal": 15,
            }
          }
        >
          Date
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "top": 30,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "dodgerblue",
          "borderRadius": 15,
          "opacity": 1,
          "paddingHorizontal": 18,
          "paddingVertical": 10,
          "top": -80,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 19,
            }
          }
        >
          Add Event
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Snapshots Recommended snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#16579c",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 14,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontSize": 36,
          "fontWeight": "bold",
          "maxWidth": "80%",
        }
      }
    >
      Today's Outfit
    </Text>
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "flex": 3,
        }
      }
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "flex": 3,
        }
      }
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 30,
          "fontWeight": "bold",
          "maxWidth": "80%",
        }
      }
    >
       22 degrees Celcius
    </Text>
    <Image
      source={
        Object {
          "uri": "http://openweathermap.org/img/wn/10d@2x.png",
        }
      }
      style={
        Object {
          "height": 100,
          "width": 100,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "backgroundColor": "#16579c",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          More Weather
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          Calendar
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "white",
              },
            ]
          }
        >
          Add Clothes
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Snapshots SavedOutfits snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#16579c",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 20,
        "paddingTop": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      style={
        Object {
          "color": "white",
          "fontSize": 36,
          "fontWeight": "bold",
          "maxWidth": "80%",
        }
      }
      underlineColorAndroid="transparent"
      value="Default Title"
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "height": 335,
        "justifyContent": "center",
        "marginBottom": 40,
        "marginTop": 20,
        "opacity": 1,
        "width": 335,
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "fontSize": 36,
          "fontWeight": "bold",
          "maxWidth": "80%",
        }
      }
    >
      placeholder
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 15,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "marginBottom": 20,
        "marginLeft": 45,
        "padding": 15,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        Overall Score
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        - /10
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 15,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "marginBottom": 20,
        "marginLeft": 45,
        "padding": 15,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        Warmth
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        - /10
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 15,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "marginBottom": 20,
        "marginLeft": 45,
        "padding": 15,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        Wind
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        - /10
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 15,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "marginBottom": 20,
        "marginLeft": 45,
        "padding": 15,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        Rain
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Futura",
            "fontSize": 16,
          }
        }
      >
        - /10
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Snapshots Weather snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 36,
        "fontWeight": "bold",
        "maxWidth": "80%",
      }
    }
  >
    Good morning,
  </Text>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 36,
        "fontWeight": "bold",
        "maxWidth": "80%",
      }
    }
  >
    Max.
  </Text>
  <View
    styles={
      Object {
        "flex": 1.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#16579c",
          "borderRadius": 10,
          "marginTop": 15,
          "padding": 10,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 30,
              "fontWeight": "bold",
            }
          }
        >
          
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#16579c",
          "borderRadius": 10,
          "marginBottom": 10,
          "marginTop": 10,
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
            }
          }
        >
          Wind Speed
        </Text>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
              "paddingRight": 10,
            }
          }
        >
          
          km/s
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
            }
          }
        >
          Sunrise
        </Text>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
              "paddingRight": 10,
            }
          }
        >
          
          am
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
            }
          }
        >
          Sunset
        </Text>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "fontWeight": "normal",
              "paddingRight": 10,
            }
          }
        >
          
          pm
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    horizontal={true}
    style={
      Object {
        "backgroundColor": "#16579c",
        "borderRadius": 10,
        "flex": 0.2,
        "padding": 35,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 15,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "http://openweathermap.org/img/wn/10d@2x.png",
            }
          }
          style={
            Object {
              "height": 150,
              "width": 150,
            }
          }
        />
        <View
          style={
            Object {
              "paddingRight": 40,
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "bold",
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Invalid date
          </Text>
          <Text
            style={
              Object {
                "fontSize": 15,
                "fontWeight": "100",
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Day - 
            NaN
            °C
          </Text>
          <Text
            style={
              Object {
                "fontSize": 15,
                "fontWeight": "100",
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Night - 
            NaN
            °C
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 5,
              "padding": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://openweathermap.org/img/wn/10d@2x.png",
              }
            }
            style={
              Object {
                "height": 100,
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "paddingRight": 40,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Friday
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Day - 13°C
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Night - 3°C
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 5,
              "padding": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://openweathermap.org/img/wn/10d@2x.png",
              }
            }
            style={
              Object {
                "height": 100,
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "paddingRight": 40,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Friday
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Day - 13°C
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Night - 3°C
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 5,
              "padding": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://openweathermap.org/img/wn/10d@2x.png",
              }
            }
            style={
              Object {
                "height": 100,
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "paddingRight": 40,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Friday
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Day - 13°C
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Night - 3°C
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 5,
              "padding": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://openweathermap.org/img/wn/10d@2x.png",
              }
            }
            style={
              Object {
                "height": 100,
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "paddingRight": 40,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Friday
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Day - 13°C
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Night - 3°C
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 5,
              "padding": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://openweathermap.org/img/wn/10d@2x.png",
              }
            }
            style={
              Object {
                "height": 100,
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "paddingRight": 40,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Friday
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Day - 13°C
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Night - 3°C
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 5,
              "padding": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://openweathermap.org/img/wn/10d@2x.png",
              }
            }
            style={
              Object {
                "height": 100,
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "paddingRight": 40,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Friday
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Day - 13°C
            </Text>
            <Text
              style={
                Object {
                  "fontSize": 15,
                  "fontWeight": "100",
                  "marginBottom": 10,
                  "textAlign": "center",
                }
              }
            >
              Night - 3°C
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
